# zero_to_production

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20231017083819_make_status_not_null_in_subscriptions.sql  20231130161100_seed_user.sql  20231219140734_create_idempotency_table.sql  20240102163554_create_newsletter_issues_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  dashboard.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
