[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"
authors = ["Flavio Esteves <flavioafesteves@gmail.com>"]

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
actix-web= "4.4.0"
tokio = {version ="1.32.0", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11.20"
