[package]

name = "zero_to_production"
version = "0.1.0"
edition = "2021"
authors = ["Flavio Esteves <flavioafesteves@gmail.com>"]

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
actix-web= "4.4"
tokio = {version ="1.32", features = ["macros", "rt-multi-thread"]}
serde = {version="1.0", features = ["derive"]}
reqwest = "0.11"
config = "0.13"
uuid = {version="1.4", features= ["v4"]}
chrono = "0.4"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tracing = {version="0.1", features= ["log"]}
tracing-subscriber = {version="0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9" 
tracing-log= "0.1"
