[package]

name = "zero_to_production"
version = "0.1.0"
edition = "2021"
authors = ["Flavio Esteves <flavioafesteves@gmail.com>"]

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero_to_production"

[dependencies]
anyhow ="1.0"
actix-web= "4.4"
actix-web-flash-messages = {version="0.4", features= ["cookies"]}
tokio = {version ="1.34", features = ["macros", "rt-multi-thread"]}
serde = {version="1.0", features = ["derive"]}
serde_json = "1"
serde-aux = "4.2"
urlencoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
config = "0.13"
uuid = {version="1.6", features= ["v4", "serde"]}
chrono = "0.4"
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls", 
  "macros", 
  "postgres", 
  "uuid", 
  "chrono", 
  "migrate"
  ] }
tracing = {version="0.1", features= ["log"]}
tracing-subscriber = {version="0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9" 
tracing-log= "0.2"
tracing-actix-web ="0.7"
secrecy = {version= "0.8", features = ["serde"]}
unicode-segmentation = "1.10"
claim = "0.5"
validator ="0.16"
rand = {version="0.8", features=["std_rng"]}
thiserror = "1"
base64 ="0.21"
argon2 = {version = "0.5", features =["std"]}
htmlescape = "0.3"
hmac = { version= "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
actix-session = {version="0.8", features =["redis-rs-tls-session"]}


[dev-dependencies]
once_cell ="1.18"
fake = "2.8"
quickcheck = "1.0"
quickcheck_macros = "1.0.0"
rand ="0.8.5"
claims ="0.7"
wiremock= "0.5"
tokio= {version= "1.33", features= ["rt", "macros"]}
serde_json= "1.0"
linkify ="0.10"
